Create DTSTAMP property for calendar export

BUG: 466383
FIXED-IN: 5.2